# Sonance

./: .gitignore  LLM_EMOTIONS.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_emotion_search.py  test_llm_emotions.py  test_lyrics_ranking.py  test_spotify.py  test_spotify_integration.py
backend/: main.py
backend/api/: routes.py
backend/services/: async_genius_service.py  embedding_service.py  emotion_mapper.py  genius_service.py  llm_emotion_service.py  llm_search_query_generator.py  playlist_generator.py  spotify_service.py
frontend/: plan.md
frontend/app/: page.tsx
frontend/components/: EmotionSelector.tsx  LoadingSpinner.tsx  PlaylistDisplay.tsx  TrackCard.tsx
frontend/src/app/: page.tsx
testing/: compare_emotion_embeddings_enhanced.py  inspect_heuristic_embeddings.py  spotify_heuristics_embeddings.md
testing/output/: embeddings.json  similarities.tsv
tests/: conftest.py  test_api_routes.py  test_embedding_service.py  test_emotion_mapper.py  test_integration.py  test_playlist_generator.py  test_schemas.py  test_spotify_service.py
